updating delete status to 200 instead of 204
