# controllers/site.js
@@ -111,7 +111,7 @@ const deleteSite = async (req, res) => {
       .deleteOne({ _id: siteId }, true);
     console.log(response);
     if (response.deletedCount > 0) {
-      res.status(204).send();
+      res.status(200).send();
     } else {
       res
         .status(500)
