# controllers/user.js
@@ -97,7 +97,7 @@ const deleteUser = async (req, res) => {
       .deleteOne({ _id: userId }, true);
     console.log(response);
     if (response.deletedCount > 0) {
-      res.status(204).send();
+      res.status(200).send();
     } else {
       res
         .status(500)
